--- a/index.html
+++ b/index.html
@@ -48,10 +48,6 @@
         <a class="nav-link" href="#">Other</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
 
@@ -69,17 +65,14 @@
     <div class="row">
       <div class="col-md-4">
         <h2>Our Members </h2>
-        <p>  gungpeng Li </p>
+        <p>  gungpeng Li :guangpenglise@163.com</p>
         <p>  Zhang tong </p>
-        <p>  Chen xi </p>
-        <p>  huining Wang </p>
-        <p>  Hong yue </p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <p>  Chen xi :chenxi_833@163.com</p>
+        <p>  huining Wang :wanghn5517@mails.jlu.edu.cn</p>
+        <p>  Hong yue :redmoon_1204@sina.com </p>
       </div>
     </div>
-
     <hr>
-
   </div> <!-- /container -->
 
 </main>
